--- a/package.json
+++ b/package.json
@@ -122,7 +122,12 @@
     "wasm-check": "2.0.1",
     "webm-duration-fix": "1.0.4",
     "windows-iana": "3.1.0",
-    "zxcvbn": "4.4.2"
+    "zxcvbn": "4.4.2",
+    "@stomp/stompjs": "^7.0.0",
+    "sockjs": "^0.3.24",
+    "sockjs-client": "^1.6.1",
+    "stomp-websocket": "^2.3.4-next",
+    "stompjs": "^2.3.3"
   },
   "devDependencies": {
     "@babel/core": "7.16.0",
@@ -177,7 +182,8 @@
     "webpack": "5.76.0",
     "webpack-bundle-analyzer": "4.4.2",
     "webpack-cli": "4.9.0",
-    "webpack-dev-server": "4.7.3"
+    "webpack-dev-server": "4.7.3",
+    "@types/sockjs-client": "^1.5.4"
   },
   "overrides": {
     "@xmldom/xmldom": "0.8.7"
